# svb2json

./: .gitignore  CHUNK2TOKENS_USAGE.md  LICENSE  README.md  pyproject.toml
svb2json/: __init__.py  chunk2tokens.py  cli.py  cli_txt.py  parser.py
tests/: __init__.py  test_chunk2tokens.py  test_cli.py  test_cli_txt.py  test_parser.py
